# backend

./: .env.example  .gitignore  AI_ASSISTANT_FIX.md  Dockerfile  MODELS_ENHANCEMENT.md  Makefile  README.md  TESTING_GUIDE.md  deep_model_analysis.py  deployment_checklist.md  docker-compose.yml  init_models.py  install-dependencies.sh  open_notebook  pyproject.toml  requirements-backend.txt  requirements-dev.txt  setup.sh  test_thealpha_tts_stt.py  test_updated_tts_stt.py
frontend/: .env.example  README.md  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/chat/: ChatInterface.tsx
frontend/src/components/layout/: Layout.tsx  Sidebar.tsx
frontend/src/components/notebook/: AddSourceModal.tsx  NotebookHeader.tsx  SourceCard.tsx
frontend/src/components/ui/: Button.tsx  Input.tsx  LoadingSpinner.tsx  Modal.tsx
frontend/src/hooks/: useChat.ts  useNotebooks.ts  useSources.ts
frontend/src/pages/: CreateNotebookPage.tsx  HomePage.tsx  NotebookPage.tsx  SearchPage.tsx
src/: database.py  main.py  models.py  tts_patch.py
src/open_notebook/: config.py
src/open_notebook/database/: repository.py
src/open_notebook/domain/: base.py  content_settings.py  models.py  notebook.py  transformation.py
src/open_notebook/graphs/: chat.py  prompt.py  transformation.py  utils.py
src/open_notebook/plugins/: podcasts.py
src/routers/: chat.py  chat_backup.py  chat_old.py  models.py  notebooks.py  notes.py  notes_backup.py  podcasts.py  search.py  serper.py  sources.py  transformations.py
